--- a/index.html
+++ b/index.html
@@ -3,75 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PayGo - حجز الفنادق</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Paygo - حجز الفنادق</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       background-color: #f8f9fa;
+      font-family: 'Tajawal', sans-serif;
     }
-    .booking-form {
-      background: white;
-      border-radius: 10px;
+    .navbar-brand {
+      font-weight: bold;
+      font-size: 1.5rem;
+      color: #007bff;
+    }
+    .search-box {
+      background-color: white;
       padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
       max-width: 600px;
-      margin: 50px auto;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      margin: 60px auto;
     }
-    .btn-search {
-      background-color: #0d6efd;
-      color: white;
+    .btn-primary {
+      background-color: #007bff;
+      border: none;
     }
   </style>
 </head>
 <body>
 
-<div class="booking-form">
-  <h4 class="mb-4 text-center">احجز فندقك الآن</h4>
-  <form id="hotelForm">
-    <div class="mb-3">
-      <label for="city" class="form-label">المدينة</label>
-      <input type="text" class="form-control" id="city" required placeholder="مثال: دبي">
+  <!-- الشريط العلوي -->
+  <nav class="navbar navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">paygo</a>
     </div>
+  </nav>
 
-    <div class="mb-3">
-      <label for="checkIn" class="form-label">تاريخ الوصول</label>
-      <input type="date" class="form-control" id="checkIn" required>
-    </div>
+  <!-- مربع البحث -->
+  <div class="search-box">
+    <h4 class="mb-4 text-center">ابحث عن أفضل الفنادق بأقل الأسعار</h4>
+    <form action="https://hotellook.tpo.lv/" method="GET" target="_blank">
+      <input type="hidden" name="marker" value="646029">
+      <input type="hidden" name="currency" value="sar">
 
-    <div class="mb-3">
-      <label for="checkOut" class="form-label">تاريخ المغادرة</label>
-      <input type="date" class="form-control" id="checkOut" required>
-    </div>
+      <div class="mb-3">
+        <label for="city" class="form-label">المدينة</label>
+        <input type="text" class="form-control" id="city" name="location" placeholder="مثال: الرياض، دبي، القاهرة" required>
+      </div>
 
-    <div class="mb-3">
-      <label for="adults" class="form-label">عدد الأشخاص</label>
-      <input type="number" class="form-control" id="adults" value="2" min="1">
-    </div>
+      <div class="mb-3">
+        <label for="checkin" class="form-label">تاريخ الوصول</label>
+        <input type="date" class="form-control" id="checkin" name="checkIn" required>
+      </div>
 
-    <div class="mb-3">
-      <label for="rooms" class="form-label">عدد الغرف</label>
-      <input type="number" class="form-control" id="rooms" value="1" min="1">
-    </div>
+      <div class="mb-3">
+        <label for="checkout" class="form-label">تاريخ المغادرة</label>
+        <input type="date" class="form-control" id="checkout" name="checkOut" required>
+      </div>
 
-    <button type="submit" class="btn btn-search w-100">بحث</button>
-  </form>
-</div>
-
-<script>
-  document.getElementById('hotelForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-
-    const city = document.getElementById('city').value.trim();
-    const checkIn = document.getElementById('checkIn').value;
-    const checkOut = document.getElementById('checkOut').value;
-    const adults = document.getElementById('adults').value;
-    const rooms = document.getElementById('rooms').value;
-
-    const baseUrl = "https://hotellook.tpo.lv/deLDIB0W";
-    const url = `${baseUrl}?location=${encodeURIComponent(city)}&checkIn=${checkIn}&checkOut=${checkOut}&adults=${adults}&rooms=${rooms}`;
-    window.open(url, '_blank');
-  });
-</script>
+      <button type="submit" class="btn btn-primary w-100">ابحث الآن</button>
+    </form>
+  </div>
 
 </body>
 </html>
