--- a/index.html
+++ b/index.html
@@ -3,66 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paygo - حجز الفنادق</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Paygo - البحث عن فنادق</title>
   <style>
     body {
       background-color: #f8f9fa;
-      font-family: 'Tajawal', sans-serif;
-    }
-    .navbar-brand {
-      font-weight: bold;
-      font-size: 1.5rem;
-      color: #007bff;
-    }
-    .search-box {
-      background-color: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      max-width: 600px;
-      margin: 60px auto;
-    }
-    .btn-primary {
-      background-color: #007bff;
-      border: none;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      margin-top: 100px;
     }
   </style>
 </head>
 <body>
 
-  <!-- الشريط العلوي -->
-  <nav class="navbar navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">paygo</a>
-    </div>
-  </nav>
-
-  <!-- مربع البحث -->
-  <div class="search-box">
-    <h4 class="mb-4 text-center">ابحث عن أفضل الفنادق بأقل الأسعار</h4>
-    <form action="https://hotellook.tpo.lv/deLDIB0W" method="GET" target="_blank">
-      <input type="hidden" name="marker" value="646029">
-      <input type="hidden" name="currency" value="sar">
-
-      <div class="mb-3">
-        <label for="city" class="form-label">المدينة</label>
-        <input type="text" class="form-control" id="city" name="location" placeholder="مثال: الرياض، دبي، القاهرة" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="checkin" class="form-label">تاريخ الوصول</label>
-        <input type="date" class="form-control" id="checkin" name="checkIn" required>
-      </div>
-
-      <div class="mb-3">
-        <label for="checkout" class="form-label">تاريخ المغادرة</label>
-        <input type="date" class="form-control" id="checkout" name="checkOut" required>
-      </div>
-
-      <button type="submit" class="btn btn-primary w-100">ابحث الآن</button>
-    </form>
-  </div>
+<!-- نموذج البحث الرسمي من Travelpayouts -->
+<script src="https://tp.media/content?demo=true&currency=sar&trs=264013&shmarker=646029&target_host=search.hotellook.com%2F&locale=ar&searchUrl=search.hotellook.com%2F&widget_type=hotel&border_radius=12&width=600&primary=%23007bff&color_background=%23ffffff&dark=%23000000&light=%23ffffff&background=%23ffffff&special=%23007bff&powered_by=false&version=2" charset="utf-8"></script>
 
 </body>
 </html>
