--- a/index.html
+++ b/index.html
@@ -3,51 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paygo - حجز الفنادق</title>
+  <title>Paygo - حجز فنادق</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       background-color: #f8f9fa;
       font-family: 'Tajawal', sans-serif;
-      padding: 40px 20px;
+      padding: 50px 20px;
     }
-    .form-box {
+    .search-box {
+      background-color: #fff;
       max-width: 500px;
       margin: auto;
-      background: white;
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
+    .btn-primary {
+      background-color: #007bff;
+      border: none;
+    }
     h2 {
-      margin-bottom: 20px;
       text-align: center;
       color: #007bff;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
 
-<div class="form-box">
-  <h2>ابحث عن فندق الآن</h2>
-  <form action="https://search.hotellook.com/" method="GET" target="_blank">
-    <input type="hidden" name="marker" value="646029">
-    <input type="hidden" name="language" value="ar">
+<div class="search-box">
+  <h2>ابحث عن فندق</h2>
+  <form id="hotelForm">
     <div class="mb-3">
       <label class="form-label">المدينة</label>
-      <input type="text" name="location" class="form-control" placeholder="مثال: دبي" required>
+      <input type="text" id="city" class="form-control" placeholder="مثال: دبي" required>
     </div>
     <div class="mb-3">
       <label class="form-label">تاريخ الوصول</label>
-      <input type="date" name="checkIn" class="form-control" required>
+      <input type="date" id="checkin" class="form-control" required>
     </div>
     <div class="mb-3">
       <label class="form-label">تاريخ المغادرة</label>
-      <input type="date" name="checkOut" class="form-control" required>
+      <input type="date" id="checkout" class="form-control" required>
     </div>
-    <button type="submit" class="btn btn-primary w-100">ابحث عن فنادق</button>
+    <button type="submit" class="btn btn-primary w-100">ابحث</button>
   </form>
 </div>
+
+<script>
+  document.getElementById("hotelForm").addEventListener("submit", function(e) {
+    e.preventDefault();
+    const city = document.getElementById("city").value.trim();
+    const checkIn = document.getElementById("checkin").value;
+    const checkOut = document.getElementById("checkout").value;
+
+    if (!city || !checkIn || !checkOut) return;
+
+    const url = `https://search.hotellook.com/?marker=646029&language=ar&location=${encodeURIComponent(city)}&checkIn=${checkIn}&checkOut=${checkOut}`;
+    window.open(url, "_blank");
+  });
+</script>
 
 </body>
 </html>
