--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
       background-size: 200px;
       background-position: center;
       background-attachment: fixed;
+      transition: background 0.5s ease, color 0.5s ease;
     }
 
-    .logo {
-      background-color: #0d47a1;
-      color: white;
-      font-size: 28px;
-      font-weight: bold;
-      padding: 18px 25px;
-      text-align: right;
-      direction: rtl;
+    /* زر الوضع الليلي */
+    .mode-toggle {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: none;
+      border: none;
+      font-size: 22px;
+      cursor: pointer;
+      color: #0d47a1;
+      transition: color 0.3s ease;
     }
 
     .search-box {
@@ -37,11 +41,12 @@
       background: rgba(33, 150, 243, 0.25);
       color: white;
       max-width: 500px;
-      margin: 40px auto;
+      margin: 70px auto;
       padding: 30px;
       border-radius: 20px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
       border: 1px solid rgba(255, 255, 255, 0.3);
+      transition: background 0.5s ease;
     }
 
     .search-box h2 {
@@ -52,7 +57,7 @@
     .input-container {
       position: relative;
       width: 90%;
-      margin: 10px auto;
+      margin: 12px auto;
     }
 
     .input-container i {
@@ -60,30 +65,31 @@
       top: 50%;
       left: 15px;
       transform: translateY(-50%);
-      color: #777;
+      color: #555;
       font-size: 16px;
     }
 
     .input-field {
       width: 100%;
-      padding: 12px 40px 12px 12px;
-      font-size: 16px;
+      padding: 14px 40px 14px 12px;
+      font-size: 17px;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       display: block;
       background-color: #ffffffee;
       color: #333;
       box-sizing: border-box;
+      transition: background 0.5s ease, color 0.5s ease;
     }
 
     button {
       width: 94%;
-      padding: 12px;
-      margin-top: 20px;
+      padding: 14px;
+      margin-top: 25px;
       background-color: #0d47a1;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       font-size: 18px;
       cursor: pointer;
     }
@@ -91,12 +97,39 @@
     button:hover {
       background-color: #08306b;
     }
+
+    /* الوضع الليلي */
+    body.dark {
+      background-color: #1b1b1b;
+      background-image: none;
+      color: white;
+    }
+
+    body.dark .mode-toggle {
+      color: #fdd835;
+    }
+
+    body.dark .search-box {
+      background: rgba(255, 255, 255, 0.08);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    body.dark .input-field {
+      background-color: #2c2c2c;
+      color: white;
+    }
+
+    body.dark .input-container i {
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
 
-  <!-- الشعار -->
-  <div class="logo">PayGo</div>
+  <!-- زر التبديل -->
+  <button class="mode-toggle" onclick="toggleMode()" title="تبديل الوضع">
+    <i id="mode-icon" class="fas fa-moon"></i>
+  </button>
 
   <!-- مربع البحث -->
   <div class="search-box">
@@ -144,6 +177,14 @@
   </div>
 
   <script>
+    function toggleMode() {
+      const body = document.body;
+      const icon = document.getElementById('mode-icon');
+      body.classList.toggle('dark');
+      icon.classList.toggle('fa-moon');
+      icon.classList.toggle('fa-sun');
+    }
+
     function searchHotels() {
       const city = document.getElementById("city").value.trim();
       const checkin = document.getElementById("checkin").value;
