--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PayGo - السياحة حول العالم</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
   <style>
     body {
       background-color: #f8f9fa;
     }
+
     .hero {
-      background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e') center/cover no-repeat;
+      background: url('https://i.gifer.com/7efs.gif') center/cover no-repeat;
       color: white;
       text-align: center;
-      padding: 100px 20px;
+      padding: 60px 20px; /* تقليل الارتفاع */
+      position: relative;
     }
+
     .hero h1 {
-      font-size: 3rem;
+      font-size: 2.2rem;
       font-weight: bold;
     }
+
     .destination img {
       height: 200px;
       object-fit: cover;
