--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PayGo - السياحة حول العالم</title>
+  <title>PayGo - أفضل الوجهات</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
   <style>
     body {
@@ -11,10 +11,10 @@
     }
 
     .hero {
-      background: url('https://media.giphy.com/media/51qUNLs2Z4y9JzviBio/giphy.gif') center/cover no-repeat;
+      background: url('https://chat.openai.com/_assets/beach-suitcase-clean.webp') center/cover no-repeat;
       color: white;
       text-align: center;
-      padding: 60px 20px;
+      padding: 80px 20px;
       position: relative;
     }
 
@@ -22,10 +22,6 @@
       font-size: 2.2rem;
       font-weight: bold;
       text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
-    }
-
-    .hero p {
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
     }
 
     .destination img {
@@ -48,8 +44,7 @@
 
   <!-- القسم الرئيسي -->
   <section class="hero">
-    <h1>اكتشف أجمل الوجهات حول العالم</h1>
-    <p>استعد لمغامرات لا تُنسى في أجمل الأماكن السياحية!</p>
+    <h1>اكتشف أفضل الوجهات السياحية</h1>
   </section>
 
   <!-- قسم الوجهات -->
