--- a/index.html
+++ b/index.html
@@ -1,65 +1,45 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PayGo - ترحيب سياحي</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PayGo - Intro</title>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
     html, body {
       height: 100%;
       overflow: hidden;
+      background: black;
     }
-
-    .video-bg {
+    video {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      z-index: -1;
-    }
-
-    .overlay {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      text-align: center;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
-      z-index: 1;
-    }
-
-    .overlay h1 {
-      font-size: 3rem;
-    }
-
-    .overlay p {
-      font-size: 1.2rem;
+      z-index: 0;
     }
   </style>
 </head>
 <body>
 
-  <!-- الخلفية بالفيديو -->
-  <video autoplay muted loop playsinline class="video-bg">
+  <!-- فيديو المقدمة بدون نص -->
+  <video autoplay muted playsinline id="introVideo">
     <source src="intro.mp4" type="video/mp4">
     متصفحك لا يدعم تشغيل الفيديو.
   </video>
 
-  <!-- النص فوق الفيديو -->
-  <div class="overlay">
-    <h1>مرحباً بك في PayGo</h1>
-    <p>اكتشف أجمل الوجهات السياحية</p>
-  </div>
+  <script>
+    const video = document.getElementById("introVideo");
+    video.addEventListener('ended', () => {
+      window.location.href = "home.html"; // غيّر هذا حسب اسم صفحتك الرئيسية
+    });
+  </script>
 
 </body>
 </html>
