--- a/index.html
+++ b/index.html
@@ -31,30 +31,6 @@
       opacity: 0;
     }
 
-    /* كلمة PayGo */
-    #maskText {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 2;
-      background: black;
-      color: white;
-      font-size: 10vw;
-      font-weight: bold;
-      font-family: 'Arial Black', sans-serif;
-      mix-blend-mode: screen;
-      opacity: 0;
-      transition: opacity 1s ease;
-    }
-    #maskText.show {
-      opacity: 1;
-    }
-
     /* الخلفية: home.html */
     #homeFrame {
       position: fixed;
@@ -78,25 +54,18 @@
     متصفحك لا يدعم تشغيل الفيديو.
   </video>
 
-  <!-- كلمة PayGo المفرغة -->
-  <div id="maskText">PayGo</div>
-
   <script>
     const video = document.getElementById("introVideo");
-    const maskText = document.getElementById("maskText");
 
     video.addEventListener('loadedmetadata', () => {
       const fadeStartTime = video.duration - 2; // قبل النهاية بـ 2 ثانية
 
       const checkFade = () => {
         if (video.currentTime >= fadeStartTime) {
-          // إظهار كلمة PayGo
-          maskText.classList.add('show');
-
           // تلاشي الفيديو
           video.classList.add('fade-out');
 
-          // حذف الفيديو نهائيًا بعد التلاشي
+          // حذف الفيديو بعد التلاشي
           setTimeout(() => {
             video.remove();
           }, 2000);
