--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>أفضل الوجهات - PayGo</title>
+  <title>PayGo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -21,9 +21,9 @@
       padding: 20px;
       text-align: center;
     }
-    header .logo {
+    header img {
       max-height: 50px;
-      object-fit: contain;
+      vertical-align: middle;
     }
     .destinations {
       display: flex;
@@ -69,7 +69,7 @@
 </head>
 <body>
   <header>
-    <img src="paygo.png" alt="PayGo Logo" class="logo">
+    <img src="paygo.png" alt="PayGo Logo">
   </header>
 
   <div class="destinations">
