--- a/home.html
+++ b/home.html
@@ -18,15 +18,14 @@
     }
     header {
       background-color: #333;
-      padding: 20px;
-      text-align: center;
+      height: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     header img {
-      max-height: 90px;
+      height: 50px;
       width: auto;
-      vertical-align: middle;
-      margin: auto;
-      display: block;
     }
     .destinations {
       display: flex;
