--- a/home.html
+++ b/home.html
@@ -18,14 +18,16 @@
     }
     header {
       background-color: #333;
-      height: 70px;
+      height: 80px;
       display: flex;
       align-items: center;
       justify-content: center;
     }
     header img {
-      height: 50px;
+      height: 70px;
       width: auto;
+      object-fit: contain;
+      display: block;
     }
     .destinations {
       display: flex;
