--- a/home.html
+++ b/home.html
@@ -29,6 +29,42 @@
       object-fit: contain;
       display: block;
     }
+
+    /* مربع البحث */
+    .search-box {
+      background-color: #fff;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin: 20px auto;
+      max-width: 800px;
+      border-radius: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+    }
+    .search-box input[type="text"],
+    .search-box input[type="date"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      width: 200px;
+      font-size: 16px;
+    }
+    .search-box button {
+      padding: 10px 20px;
+      background-color: #007bff;
+      border: none;
+      color: white;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .search-box button:hover {
+      background-color: #0056b3;
+    }
+
     .destinations {
       display: flex;
       flex-wrap: wrap;
@@ -76,7 +112,16 @@
     <img src="paygs.png" alt="PayGo Logo">
   </header>
 
+  <!-- مربع البحث عن الفنادق -->
+  <div class="search-box">
+    <input type="text" placeholder="المدينة">
+    <input type="date" placeholder="تاريخ الوصول">
+    <input type="date" placeholder="تاريخ المغادرة">
+    <button>بحث</button>
+  </div>
+
   <div class="destinations">
+    <!-- الوجهات السياحية -->
     <div class="card"><img src="https://source.unsplash.com/300x180/?paris"><h3>باريس</h3><p>عاصمة النور والجمال، تشتهر ببرج إيفل والمتاحف.</p><button onclick="location.href='paris.html'">تفاصيل</button></div>
     <div class="card"><img src="https://source.unsplash.com/300x180/?dubai"><h3>دبي</h3><p>مدينة المستقبل، ناطحات سحاب وتسوق عالمي.</p><button onclick="location.href='dubai.html'">تفاصيل</button></div>
     <div class="card"><img src="https://source.unsplash.com/300x180/?tokyo"><h3>طوكيو</h3><p>مدينة حديثة بثقافة يابانية تقليدية مدهشة.</p><button onclick="location.href='tokyo.html'">تفاصيل</button></div>
