--- a/home.html
+++ b/home.html
@@ -1,114 +1,211 @@
-<!-- مربع بحث بشكل احترافي -->
-<div class="hotel-search">
-  <div class="search-input">
-    <input type="text" placeholder="إلى أين تريد أن تذهب؟">
-    <span class="icon">🔍</span>
-  </div>
-  
-  <div class="date-boxes">
-    <div>
-      <label>الوصول</label>
-      <input type="date">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <title>PayGo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      opacity: 0;
+      transition: opacity 2s ease;
+    }
+    body.fade-in {
+      opacity: 1;
+    }
+    header {
+      background-color: #333;
+      height: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    header img {
+      height: 70px;
+      width: auto;
+      object-fit: contain;
+      display: block;
+    }
+
+    .hotel-search {
+      background: #fff;
+      max-width: 700px;
+      margin: 20px auto;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      direction: rtl;
+    }
+    .search-input {
+      position: relative;
+      margin-bottom: 15px;
+    }
+    .search-input input {
+      width: 100%;
+      padding: 12px 40px 12px 12px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+    .search-input .icon {
+      position: absolute;
+      left: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 18px;
+      color: #007bff;
+    }
+
+    .date-boxes {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 15px;
+    }
+    .date-boxes div {
+      flex: 1;
+    }
+    .date-boxes label {
+      display: block;
+      margin-bottom: 5px;
+      color: #333;
+      font-weight: bold;
+    }
+    .date-boxes input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 15px;
+    }
+
+    .room-info {
+      position: relative;
+      margin-bottom: 20px;
+    }
+    .room-info input {
+      width: 100%;
+      padding: 12px 40px 12px 12px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 15px;
+    }
+    .room-info .icon {
+      position: absolute;
+      left: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 18px;
+      color: #007bff;
+    }
+
+    .search-btn {
+      width: 100%;
+      padding: 14px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    .search-btn:hover {
+      background-color: #0056b3;
+    }
+
+    .destinations {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 20px;
+      gap: 20px;
+    }
+    .card {
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 300px;
+      overflow: hidden;
+      text-align: center;
+    }
+    .card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+    .card h3 {
+      margin: 10px 0;
+      color: #333;
+    }
+    .card p {
+      padding: 0 15px 10px;
+      color: #555;
+    }
+    .card button {
+      margin-bottom: 15px;
+      padding: 10px 20px;
+      background-color: #007bff;
+      border: none;
+      color: white;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .card button:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="paygs.png" alt="PayGo Logo">
+  </header>
+
+  <!-- مربع البحث -->
+  <div class="hotel-search">
+    <div class="search-input">
+      <input type="text" placeholder="إلى أين تريد أن تذهب؟">
+      <span class="icon">🔍</span>
     </div>
-    <div>
-      <label>المغادرة</label>
-      <input type="date">
+
+    <div class="date-boxes">
+      <div>
+        <label>الوصول</label>
+        <input type="date">
+      </div>
+      <div>
+        <label>المغادرة</label>
+        <input type="date">
+      </div>
     </div>
+
+    <div class="room-info">
+      <input type="text" readonly value="1 غرفة، 2 بالغون، 0 أطفال">
+      <span class="icon">👤</span>
+    </div>
+
+    <button class="search-btn">ابحث</button>
   </div>
 
-  <div class="room-info">
-    <input type="text" readonly value="1 غرفة، 2 بالغون، 0 أطفال">
-    <span class="icon">👤</span>
+  <!-- الوجهات -->
+  <div class="destinations">
+    <div class="card"><img src="https://source.unsplash.com/300x180/?paris"><h3>باريس</h3><p>عاصمة النور والجمال، تشتهر ببرج إيفل والمتاحف.</p><button onclick="location.href='paris.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?dubai"><h3>دبي</h3><p>مدينة المستقبل، ناطحات سحاب وتسوق عالمي.</p><button onclick="location.href='dubai.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?tokyo"><h3>طوكيو</h3><p>مدينة حديثة بثقافة يابانية تقليدية مدهشة.</p><button onclick="location.href='tokyo.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?newyork"><h3>نيويورك</h3><p>المدينة التي لا تنام، معالم عالمية وأسواق.</p><button onclick="location.href='newyork.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?rome"><h3>روما</h3><p>عاصمة التاريخ الإيطالي، الكولوسيوم والآثار.</p><button onclick="location.href='rome.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?istanbul"><h3>إسطنبول</h3><p>مدينة عريقة بين آسيا وأوروبا.</p><button onclick="location.href='istanbul.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?london"><h3>لندن</h3><p>عاصمة المملكة المتحدة، تاريخ وحداثة.</p><button onclick="location.href='london.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?barcelona"><h3>برشلونة</h3><p>مدينة فنية على البحر الأبيض المتوسط.</p><button onclick="location.href='barcelona.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?cairo"><h3>القاهرة</h3><p>المدينة الفرعونية القديمة والأهرامات.</p><button onclick="location.href='cairo.html'">تفاصيل</button></div>
+    <div class="card"><img src="https://source.unsplash.com/300x180/?bali"><h3>بالي</h3><p>جزيرة الأحلام، شواطئ ساحرة وطبيعة خلابة.</p><button onclick="location.href='bali.html'">تفاصيل</button></div>
   </div>
 
-  <button class="search-btn">ابحث</button>
-</div>
-
-<style>
-.hotel-search {
-  background: #fff;
-  max-width: 700px;
-  margin: 20px auto;
-  border-radius: 12px;
-  padding: 20px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  font-family: Arial, sans-serif;
-  direction: rtl;
-}
-
-.search-input {
-  position: relative;
-  margin-bottom: 15px;
-}
-.search-input input {
-  width: 100%;
-  padding: 12px 40px 12px 12px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  font-size: 16px;
-}
-.search-input .icon {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 18px;
-  color: #007bff;
-}
-
-.date-boxes {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 15px;
-}
-.date-boxes div {
-  flex: 1;
-}
-.date-boxes label {
-  display: block;
-  margin-bottom: 5px;
-  color: #333;
-  font-weight: bold;
-}
-.date-boxes input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  font-size: 15px;
-}
-
-.room-info {
-  position: relative;
-  margin-bottom: 20px;
-}
-.room-info input {
-  width: 100%;
-  padding: 12px 40px 12px 12px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  font-size: 15px;
-}
-.room-info .icon {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 18px;
-  color: #007bff;
-}
-
-.search-btn {
-  width: 100%;
-  padding: 14px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  font-size: 18px;
-  cursor: pointer;
-}
-.search-btn:hover {
-  background-color: #0056b3;
-}
-</style>
+  <script>
+    window.addEventListener('load', () => {
+      document.body.classList.add('fade-in');
+    });
+  </script>
+</body>
+</html>
